[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Space.gd" type="Script" id=1]
[ext_resource path="res://On.tscn" type="PackedScene" id=2]
[ext_resource path="res://Axis.tscn" type="PackedScene" id=3]
[ext_resource path="res://Wall.tscn" type="PackedScene" id=4]
[ext_resource path="res://CanvasLayer.gd" type="Script" id=5]

[sub_resource type="CylinderMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 0, 0, 1 )

[node name="World" type="Spatial"]

[node name="Space" type="Spatial" parent="."]
transform = Transform( 0.999993, 0, 0.00385717, 0, 1, 0, -0.00385717, 0, 0.999993, 0, 0, 0 )
script = ExtResource( 1 )

[node name="Wall" parent="." instance=ExtResource( 4 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0, 0 )
visible = false

[node name="On" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.89126, 0.453493, 0, -0.453493, 0.89126, 0, 7.55318, 11.2071 )
projection = 2
fov = 45.9
size = 1.04
frustum_offset = Vector2( 0, -0.287 )
near = 0.91

[node name="Axis" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.05961, 0 )
visible = false

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.06, 0, 0, 0, 6, 0, 0, 0, 0.06, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="Button" type="Button" parent="CanvasLayer"]
margin_right = 100.0
margin_bottom = 32.0
text = "Fetch"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="CanvasLayer"]

[node name="NameEdit" type="LineEdit" parent="CanvasLayer"]
margin_left = 110.419
margin_top = 5.0
margin_right = 250.419
margin_bottom = 29.0
expand_to_text_length = true
placeholder_text = "Content Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.858002, 0.513646, 0, -0.513646, 0.858002, 0, 4.28107, 1.14221 )
light_energy = 1.11
light_indirect_energy = 6.49
light_specular = 0.21
light_bake_mode = 2
shadow_enabled = true
shadow_bias = 0.0
shadow_contact = 1.0
[connection signal="configure_space" from="CanvasLayer" to="Space" method="_on_CanvasLayer_configure_space"]
[connection signal="pressed" from="CanvasLayer/Button" to="CanvasLayer" method="_on_Button_pressed"]
